# arith_lang

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  HOWTO-AGENT.md  HOWTO-TASK.md  HOWTO-TEST.md  README.md  fix.sh  log.txt  parse_impl.cpp  suggest.md  syntax.md  test_runner.sh
.claude/agent-memory/quality-test-runner/: MEMORY.md
.claude/agents/: quality-test-runner.md
.clinerules/: cline-instructions.md
.github/instructions/: commit.instructions.md  memory-bank.instructions.md
.github/prompts/: deep-planning.prompt.md
include/: ast.h  codegen.h  function_ast.h  lexer.h  module_resolver.h  parse_error_reporting.h  parser.h  type_check.h
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plans/: error-reporting-improvement-plan.md  mut-implementation-plan.md  sample-function-implementation-plan.md
rules/: anchor-comments.md  commit-log.md  commit_log.md
scripts/ralph/: .last-branch  copilot.md  prd.json  progress.txt
specs/: closure.md  entry-point.md  functions.md  language-model.md  modules.md  parse_error_reporting.md  print.md  syntax.md  test_parse_error_reporting.md  test_parser_negative_cases.md  variables.md
src/: codegen.cpp  function_codegen.cpp  lexer.cpp  main.cpp  module_resolver.cpp  parse_error_reporting.cpp  parser.cpp  type_check.cpp
tasks/: prd-defining-function.md  prd-enhanced-error-reporting.md
tests/: test_codegen.cpp  test_error_display.cpp  test_function_parser.cpp  test_integration.cpp  test_integration_error_reporting.cpp  test_lexer.cpp  test_mutability.cpp  test_parser.cpp  test_parser_error_helpers.cpp  test_parser_negative.cpp  test_source_location.cpp  test_syntax.cpp
tests/k/: factorial.k  function_basic.k  function_block.k  function_closure.k  function_higher_order.k  function_mutable_capture.k  function_recursive.k  hello.k  math.k  pi_leibniz.k  test_comparison.k  test_complete_printf.k  test_eq.k  test_gte.k  test_if.k  test_if_false.k  test_if_undefined.k  test_immutable_error.k  test_lt.k  test_lte.k  test_missing_semicolon_print.k  test_module.k  test_module_alias.k  test_module_dir.k  test_mut_scope.k  test_mutable_basic.k  test_neq.k  test_nested_error.k  test_paren_error.k  test_precedence.k  test_print_error.k  test_shadowing.k  test_string_in_math.k  test_type_mismatch_add.k  test_type_mismatch_mutation.k  test_unary_minus.k  test_unary_string.k  test_uninitialized_var.k  test_unmatched_paren.k  test_unterminated_string.k  (+2 more)
tests/k/sub/: submath.k  test_module_parent.k
